Improved table style.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@341 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -138,7 +138,11 @@ td { border-bottom: 1px solid #d6d6d6; }
 
 thead td { border-bottom: none; }
 
-thead td, th { background: #1f1f1f; }
+thead td, th {
+    color: #fff;
+    background: #1f1f1f;
+    border-bottom: 1px solid #fff;
+}
 
 thead td a, thead td a:link, thead td a:visited,
 th a, th a:link, th a:visited { color: #d6d6d6; }
