--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -141,7 +141,9 @@ thead td { border-bottom: none; }
 thead td, th {
     color: #fff;
     background: #1f1f1f;
+    border-right: 1px solid #fff;
     border-bottom: 1px solid #fff;
+    padding: 5px 10px;
 }
 
 thead td a, thead td a:link, thead td a:visited,
