The subscription form is now hidden when no subscriptions are available.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@345 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/notifications/notification_list.html
+++ b/themes/default/templates/notifications/notification_list.html
@@ -39,10 +39,12 @@
     <p class="disabled">{% trans "No results found." %}</p>
     {% endif %}
     {% include 'elements/paginator.html' %}
+    {% if form %}
     <form class="notification-form" method="post" action=".">
         {% csrf_token %}
         {{ form.as_p }}
         <span class="submit"><input type="submit" value="{% trans 'Save' %}" /></span>
     </form>
+    {% endif %}
 </div>
 {% endblock %}
