Added "auth.User" to the list of searchable models.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@350 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -232,6 +232,7 @@ if DEBUG:
 
 # Taxonomy options.
 SEARCH_IN_MODELS = (
+    'auth.User',
     'taxonomy.Category',
     'taxonomy.Tag',
     #'todo.Task',
