--- a/themes/default/templates/notifications/notification_list.html
+++ b/themes/default/templates/notifications/notification_list.html
@@ -40,7 +40,7 @@
     {% endif %}
     {% include 'elements/paginator.html' %}
     {% if form %}
-    <form class="notification-form" method="post" action=".">
+    <form class="subscription-form" method="post" action=".">
         {% csrf_token %}
         {{ form.as_p }}
         <span class="submit"><input type="submit" value="{% trans 'Save' %}" /></span>
