Added support for dynamic menu links: it's now possible to use context placeholders in "url", "title" or "description" attributes.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@352 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/menus/bookmark_delete.html
+++ b/themes/default/templates/menus/bookmark_delete.html
@@ -9,8 +9,8 @@
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Users' 'user_list' %}
     {% add_crumb object_user object_user.get_absolute_url %}
-    {% add_crumb 'Bookmarks' 'bookmark_list' user.username %}
-    {% add_crumb object object.get_absolute_url %}
+    {% add_crumb 'Bookmarks' 'bookmark_list' object_user.username %}
+    {% add_crumb object %}
     {% add_crumb 'Delete' %}
     {% render_breadcrumbs %}
 {% endblock %}
