--- a/themes/default/templates/menus/bookmark_edit.html
+++ b/themes/default/templates/menus/bookmark_edit.html
@@ -11,9 +11,9 @@
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Users' 'user_list' %}
     {% add_crumb object_user object_user.get_absolute_url %}
-    {% add_crumb 'Bookmarks' 'bookmark_list' user.username %}
+    {% add_crumb 'Bookmarks' 'bookmark_list' object_user.username %}
     {% if object.pk %}
-    {% add_crumb object object.get_absolute_url %}
+    {% add_crumb object %}
     {% add_crumb 'Edit' %}
     {% else %}
     {% add_crumb 'Add' %}
