Split of model "Subscription" in "Signature" and "Subscription" and added option to select email notification.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@353 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/notifications/notification_list.html
+++ b/themes/default/templates/notifications/notification_list.html
@@ -42,7 +42,19 @@
     {% if form %}
     <form class="subscription-form" method="post" action=".">
         {% csrf_token %}
-        {{ form.as_p }}
+        <table>
+            <tr>
+                <th class="signature">{% trans "Signature" %}</th>
+                <th class="subscribe">{% trans "Subscribe?" %}</th>
+                <th class="email">{% trans "Email?" %}</th>
+            </tr>
+            {% for field in form %}
+            <tr>
+                <td>{{ field.label_tag }}</td>
+                {{ field }}
+            </tr>
+            {% endfor %}
+        </table>
         <span class="submit"><input type="submit" value="{% trans 'Save' %}" /></span>
     </form>
     {% endif %}
