--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -386,36 +386,33 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     clear: both;
     float: left;
     width: 100%;
-    padding: 10px 0 0;
-    margin-top: 50px;
+    padding: 0;
+    margin-top: 40px;
     border: none;
     background: none;
-    border-top: 2px solid #d6d6d6;
 }
 
-.subscription-form p {
-    clear: both;
-    float: left;
-    width: 100%;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #d6d6d6;
+.subscription-form td, .subscription-form th { text-align: center; }
+
+.subscription-form th.signature {
+    text-align: left;
+    width: 600px;
 }
 
 .subscription-form label {
     float: left;
-    width: 770px;
+    width: auto;
+    margin: 0;
 }
 
 .subscription-form input {
-    clear: none;
-    float: right;
-    margin-top: 2px;
-    margin-right: 0;
+    display: inline;
+    margin: 0;
 }
 
 .subscription-form .submit {
     float: right;
-    margin-right: 0;
+    margin: 0;
 }
 
 /**
