Added proof of concept of "streams" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@365 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -196,6 +196,7 @@ INSTALLED_APPS = (
     'prometeo.core.auth',
     'prometeo.core.registration',
     'prometeo.core.notifications',
+    'prometeo.core.streams',
     'prometeo.core.taxonomy',
 
     #'prometeo.todo',
