--- a/themes/default/templates/projects/ticket_list.html
+++ b/themes/default/templates/projects/ticket_list.html
@@ -35,6 +35,9 @@
 {% if perms.projects.change_ticket %}
 <li class="active"><a href="{% url ticket_list object.slug %}">{% trans 'Tickets' %}</a></li>
 {% endif %}
+{% if perms.streams.change_stream %}
+<li><a href="{% url project_timeline object.slug %}">{% trans 'Timeline' %}</a></li>
+{% endif %}
 {% endblock %}
 
 {% block section %}
