- Replaced the "compare_link" filter with the new "matchlink" templatetag. - Make all section menus dynamic: now they are rendered using "Menu" and "Link" models.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@366 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -767,6 +767,11 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 #main .title h2 { color: #1f1f1f; }
 
+#main .title .meta {
+    float: right;
+    margin-bottom: -20px;
+}
+
 #main .sections .menu {
     border-bottom: 1px solid #d6d6d6;
 }
@@ -786,15 +791,16 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 #main .sections .menu li a {
     background: #f6f6f6;
+    border: none;
     border-top: 1px solid #d6d6d6;
     border-right: 1px solid #d6d6d6;
     padding: 10px;
 }
 
-#main .sections .menu li.active a {
+#main .sections .menu li a.active {
     background: #fff;
     border-bottom: 1px solid #fff;
-    
+    margin-bottom: -1px;
 }
 
 #main .sections .section {
