--- a/themes/default/templates/auth/user_detail.html
+++ b/themes/default/templates/auth/user_detail.html
@@ -4,6 +4,7 @@
 {% load breadcrumbs %}
 {% load navigator %}
 {% load avatar %}
+{% load menu %}
 
 {% block meta_title %}{{ object }}{% endblock %}
 
@@ -44,13 +45,7 @@
 {% endwith %}
 <div class="sections">
     <div class="menu">
-        <ul>
-            {% block menu %}
-            <li class="active"><a href="{{ object.get_absolute_url }}">{% trans 'Profile' %}</a></li>
-            <li><a href="{% url bookmark_list object.username %}">{% trans 'Bookmarks' %}</a></li>
-            <li><a href="{% url notification_list object.username %}">{% trans 'Notifications' %}</a></li>
-            {% endblock %}
-        </ul>
+        {% menu "user_profile_menu" %}
     </div>
     <div class="section">
         {% block section %}
