--- a/themes/default/templates/menus/menu.html
+++ b/themes/default/templates/menus/menu.html
@@ -5,7 +5,7 @@
 {% for link in links %}
     {% if link.authorized %}
     <li class="menu-link" id="{{ link.slug|escape }}-link">
-        <a{% if link|compare_link:request.get_full_path %} class="active"{% endif %} href="{{ link.url|escape }}" title="{% if link.description %}{{ link.description|escape }}{% else %}{{ link.title|escape }}{% endif %}">
+        <a{% matchlink link request.get_full_path %} href="{{ link.url|escape }}" title="{% trans link.description|default:link.title|escape %}">
             {% trans link.title|escape %}
         </a>
         {% if link.submenu %}
