--- a/themes/default/templates/projects/milestone_detail.html
+++ b/themes/default/templates/projects/milestone_detail.html
@@ -5,6 +5,7 @@
 {% load breadcrumbs %}
 {% load navigator %}
 {% load region %}
+{% load menu %}
 
 {% block meta_title %}{{ object|striptags|capfirst }}{% endblock %}
 
@@ -48,16 +49,7 @@
 <div class="details">
     <div class="sections">
         <div class="menu">
-            <ul>
-                {% block menu %}
-                {% if perms.projects.change_milestone %}
-                <li class="active"><a href="{{ object.get_absolute_url }}">{% trans 'Dashboard' %}</a></li>
-                {% endif %}
-                {% if perms.projects.change_ticket %}
-                <li><a href="{% url milestone_tickets object.project.slug object.slug %}">{% trans 'Tickets' %}</a></li>
-                {% endif %}
-                {% endblock %}
-            </ul>
+            {% menu "milestone_menu" %}
         </div>
         <div class="section">
             {% block section %}
