--- a/themes/default/templates/projects/ticket_detail.html
+++ b/themes/default/templates/projects/ticket_detail.html
@@ -3,10 +3,9 @@
 {% load i18n %}
 {% load markup %}
 {% load breadcrumbs %}
+{% load menu %}
 
 {% block meta_title %}{{ object|striptags|capfirst }}{% endblock %}
-{% if object.description %}{% block meta_description %}{{ object.description|striptags|capfirst }}{% endblock %}{% endif %}
-{% if object.tags.all %}{% block meta_keywords %}{{ object.tags.all|join:", " }}{% endblock %}{% endif %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -19,12 +18,9 @@
 
 {% block title %}
 <div class="title">
+    {% if object.closed %}<p class="meta">{% blocktrans with object.closed as closed %}Closed on {{ closed }}{% endblocktrans %}</p>{% endif %}
     <h1>{{ object|escape|capfirst }}</h1>
-    <p class="meta">
-    {% if object.closed %}
-    {% blocktrans with object.closed as closed %}Closed on {{ closed }}{% endblocktrans %}
-    {% endif %}
-    </p>
+    <h2>{% block subtitle %}{% trans "Details" %}{% endblock %}</h2>
 </div>
 {% endblock %}
 
@@ -46,59 +42,68 @@
     </ul>
 </div>
 {% include 'elements/navigator.html' %}
-<div class="details">
-    <table class="properties">
-        <tr>
-            <th>{% trans "Reported by" %}:</th>
-            <td><a class="author" href="{{ object.author.get_absolute_url }}">{{ object.author }}</a></td>
-            <th>{% trans "Assigned to" %}:</th>
-            <td>{% for assignee in object.assignees.all %} <a class="assignee" href="{{ assignee.get_absolute_url }}">{{ assignee }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "nobody" %}</span>{% endfor %}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Created on" %}:</th>
-            <td>{{ object.created }}</td>
-            <th>{% trans "Last modified on" %}:</th>
-            <td>{{ object.modified }}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Status" %}:</th>
-            <td>{{ object.status }}</td>
-            <th>{% trans "Type" %}:</th>
-            <td>{{ object.type }}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Milestone" %}:</th>
-            <td>
-                {% if object.milestone %}
-                <a href="{{ object.milestone.get_absolute_url }}">{{ object.milestone }}</a>
-                {% else %}
-                <span class="disabled">{% trans "empty" %}</span>
-                {% endif %}
-            </td>
-            <th>{% trans "Urgency" %}:</th>
-            <td>{{ object.urgency }}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Areas" %}:</th>
-            <td colspan="3">{% for area in object.areas.all %} <a class="area" href="{{ area.get_absolute_url }}">{{ area }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Tags" %}:</th>
-            <td colspan="3">{% for tag in object.tags.all %} <a class="tag" href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Categories" %}:</th>
-            <td colspan="3">{% for category in object.categories.all %} <a class="category" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Description" %}:</th>
-            <td colspan="3">
-                {% with object.description as description %}
-                {% include "projects/entry.html" %}
-                {% endwith %}
-            </td>
-        </tr>
-    </table>
-    {% include "elements/comments.html" %}
+<div class="sections">
+    <div class="menu">
+        {% menu "ticket_menu" %}
+    </div>
+    <div class="section">
+        {% block section %}
+        <div class="details">
+            <table class="properties">
+                <tr>
+                    <th>{% trans "Reported by" %}:</th>
+                    <td><a class="author" href="{{ object.author.get_absolute_url }}">{{ object.author }}</a></td>
+                    <th>{% trans "Assigned to" %}:</th>
+                    <td>{% for assignee in object.assignees.all %} <a class="assignee" href="{{ assignee.get_absolute_url }}">{{ assignee }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "nobody" %}</span>{% endfor %}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Created on" %}:</th>
+                    <td>{{ object.created }}</td>
+                    <th>{% trans "Last modified on" %}:</th>
+                    <td>{{ object.modified }}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Status" %}:</th>
+                    <td>{{ object.status }}</td>
+                    <th>{% trans "Type" %}:</th>
+                    <td>{{ object.type }}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Milestone" %}:</th>
+                    <td>
+                        {% if object.milestone %}
+                        <a href="{{ object.milestone.get_absolute_url }}">{{ object.milestone }}</a>
+                        {% else %}
+                        <span class="disabled">{% trans "empty" %}</span>
+                        {% endif %}
+                    </td>
+                    <th>{% trans "Urgency" %}:</th>
+                    <td>{{ object.urgency }}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Areas" %}:</th>
+                    <td colspan="3">{% for area in object.areas.all %} <a class="area" href="{{ area.get_absolute_url }}">{{ area }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Tags" %}:</th>
+                    <td colspan="3">{% for tag in object.tags.all %} <a class="tag" href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Categories" %}:</th>
+                    <td colspan="3">{% for category in object.categories.all %} <a class="category" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Description" %}:</th>
+                    <td colspan="3">
+                        {% with object.description as description %}
+                        {% include "projects/entry.html" %}
+                        {% endwith %}
+                    </td>
+                </tr>
+            </table>
+            {% include "elements/comments.html" %}
+        </div>
+        {% endblock %}
+    </div>
 </div>
 {% endblock %}
