A small fix to the CSS.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@367 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -554,7 +554,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     margin: 0 auto;
     padding-bottom: 20px;
     overflow: auto;
-    background: url(images/menu.jpg) repeat-y 200px;
+    background: url(images/menu.jpg) repeat-y 200px -5px;
 }
 
 #content li, #content dt { background: url(images/bullet.png) no-repeat left 8px; }
