Added preliminary support for unplanned tasks.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@369 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -681,6 +681,8 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     padding-left: 0;
 }
 
+#content ul.tasks { border-top: 2px solid #d6d6d6; }
+
 #content .tasks dd { margin: 0; }
 
 #content .tasks li {
