Fixed rendering of project manager field.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@370 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -55,7 +55,7 @@
                 <tr>
                     <th>{% trans "Project manager" %}:</th>
                     <td colspan="3">
-                        {% if object.parent %}
+                        {% if object.manager %}
                         <a class="manager" href="{{ object.manager.get_absolute_url }}">{{ object.manager }}</a>
                         {% else %}
                         <span class="disabled">{% trans "empty" %}</span>
