Improved milestone list layout and style.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@372 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -325,7 +325,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 .progressbar {
     clear: both;
     float: left;
-    width: 100%;
+    width: 50%;
     background: #f2f2f2 url(images/bg_progressbar_right.jpg) no-repeat right center;
 }
 
@@ -709,12 +709,10 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 #content .tasks .delay, #content .tasks .countdown  { float: right; }
 
-#content .milestones .milestones { padding-left: 100px; }
-
 #content .milestones dt {
     border-bottom: 2px solid #d6d6d6;
     background: none;
-    padding: 0;
+    padding: 25px 0 0;
 }
 
 #content .milestones dt h3 { margin-bottom: 5px; }
