--- a/themes/default/templates/projects/project_timeline.html
+++ b/themes/default/templates/projects/project_timeline.html
@@ -37,7 +37,7 @@
                     <span class="timesince">({% blocktrans %}{{ timesince }} ago{% endblocktrans %})</span>
                     {% endwith %}
                     {% if item.description %}
-                    <p class="description">{{ item.description }}</p>
+                    <p class="description">{{ item.description|safe }}</p>
                     {% endif %}
                 </li>
             {% endfor %}
