- Changed field "assignees" to a single "assignee". - Removed unused fields as "public" and "last_modified_by". - Renamed custom permission from "change_assignees" to "change_assignee". - Fixed "ticket_detail" template. - Fixed "TicketForm" and related views.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@378 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/ticket_detail.html
+++ b/themes/default/templates/projects/ticket_detail.html
@@ -54,7 +54,7 @@
                     <th>{% trans "Reported by" %}:</th>
                     <td><a class="author" href="{{ object.author.get_absolute_url }}">{{ object.author }}</a></td>
                     <th>{% trans "Assigned to" %}:</th>
-                    <td>{% for assignee in object.assignees.all %} <a class="assignee" href="{{ assignee.get_absolute_url }}">{{ assignee }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "nobody" %}</span>{% endfor %}</td>
+                    <td>{% if object.assignee %}<a class="assignee" href="{{ object.assignee.get_absolute_url }}">{{ object.assignee }}</a>{% else %}<span class="disabled">{% trans "empty" %}</span>{% endif %}</td>
                 </tr>
                 <tr>
                     <th>{% trans "Created on" %}:</th>
