- Added "SplitDateTimeField" and "SplitDateTimeWidget" (the last one uses jQuery). - Replaced all normal form date/time fields with the new "SplitDateTimeField" one. - Added media for jQuery-UI. - Added automatic form media handling in the "base.html" template so it's no longer necessary to extend "wysiwyg/base.html".
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@384 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -96,6 +96,10 @@ form input, form select {
     font-style: normal;
 }
 
+form input { padding: 3px; }
+
+form select { padding: 2px 3px 1px; }
+
 form textarea {
     clear: left;
     width: 100%;
@@ -125,10 +129,32 @@ form .json-key {
     width: 100px; 
     margin-right: 0;
 }
+
 form .json-val {
     clear: none;
     width: 160px; 
     margin-right: 0;
+}
+
+form .datepicker, form .timepicker {
+    clear: none;
+    margin-right: 0;
+}
+
+form input.datepicker {
+    width: 135px;
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+
+form input.timepicker {
+    width: 30px;
+    margin-left: 5px;
+}
+
+select.timepicker {
+    width: 55px;
+    margin-left: 5px;
 }
 
 /**
