--- a/themes/default/templates/admin/wysiwyg/index.html
+++ b/themes/default/templates/admin/wysiwyg/index.html
@@ -1,4 +1,4 @@
-{% extends "admin/wysiwyg/base.html" %}
+{% extends "admin/base.html" %}
 {% load i18n adminmedia %}
 
 {% block bodyclass %}change-list wysiwyg{% endblock %}
