--- a/themes/default/templates/admin/wysiwyg/mkdir.html
+++ b/themes/default/templates/admin/wysiwyg/mkdir.html
@@ -1,4 +1,4 @@
-{% extends "admin/wysiwyg/base.html" %}
+{% extends "admin/base.html" %}
 {% load i18n adminmedia %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />{% endblock %}
