--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -90,15 +90,14 @@ form label {
 
 form input, form select {
     clear: left;
-    padding: 3px;
     width: 270px;
     margin-right: 100%;
     font-style: normal;
 }
 
-form input { padding: 3px; }
+form input { padding: 3px 3px 4px; }
 
-form select { padding: 2px 3px 1px; }
+form select { padding: 2px; }
 
 form textarea {
     clear: left;
@@ -142,13 +141,13 @@ form .datepicker, form .timepicker {
 }
 
 form input.datepicker {
-    width: 135px;
+    width: 115px;
     margin-left: 5px;
     margin-bottom: 5px;
 }
 
 form input.timepicker {
-    width: 30px;
+    width: 20px;
     margin-left: 5px;
 }
 
