- Moved "clean_referer" from "menus" to "core.utils". - Improved "SelectMultipleAndAddWidget" with JS. - Changed redirect url of "tag_add" and "category_add" views.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@388 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -440,6 +440,8 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     margin: 0;
 }
 
+.ui-dialog #main { width: 310px; }
+
 /**
  * Layout.
  */
