- Big changes on "streams" app schema: the "Activity" model is now more flexible but requires a little bit of manual work when you need to generate a new activity. - Improvements on notification and activity rendering. - Now tickets post activities on related milestone streams too.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@394 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/milestone_timeline.html
+++ b/themes/default/templates/projects/milestone_timeline.html
@@ -31,7 +31,7 @@
                 <li class="{{ item.action }}">
                     <strong>{{ item.created.time }}</strong>
                     {% if item.get_absolute_url %}
-                    <a href="{{ item.get_absolute_url }}">{{ item }}</a>
+                    <a href="{{ item.get_absolute_url }}">{{ item|capfirst }}</a>
                     {% else %}
                     {{ item }}
                     {% endif %}
@@ -39,7 +39,7 @@
                     <span class="timesince">({% blocktrans %}{{ timesince }} ago{% endblocktrans %})</span>
                     {% endwith %}
                     {% if item.description %}
-                    <p class="description">{{ item.description|safe }}</p>
+                    <p class="description">{{ item.get_description|safe }}</p>
                     {% endif %}
                 </li>
             {% endfor %}
