--- a/themes/default/templates/notifications/notification_delete.html
+++ b/themes/default/templates/notifications/notification_delete.html
@@ -17,7 +17,7 @@
 
 {% block title %}
 <div class="title">
-    <h1>{{ object }}</h1>
+    <h1>{{ object|capfirst }}</h1>
     <h2>{% trans 'Delete' %}</h2>
 </div>
 {% endblock %}
