--- a/themes/default/templates/notifications/notification_list.html
+++ b/themes/default/templates/notifications/notification_list.html
@@ -24,7 +24,7 @@
         {% for notification in object_list %}
         <li{% if notification.read %} class="read"{% endif %}>
             <strong>{{ notification.created }}</strong>
-            <a href="{{ notification.get_absolute_url }}">{{ notification.title }}</a>
+            <a href="{{ notification.get_absolute_url }}">{{ notification.title|capfirst }}</a>
             {% if notification.read %}<span class="read-on">({{ notification.read }})</span>{% endif %}
         </li>
         {% endfor %}
