- Added generation of activities on comment creation and deletion. - Improved timeline rendering.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@395 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/project_timeline.html
+++ b/themes/default/templates/projects/project_timeline.html
@@ -31,7 +31,7 @@
                     {% if item.get_absolute_url %}
                     <a href="{{ item.get_absolute_url }}">{{ item|capfirst }}</a>
                     {% else %}
-                    {{ item }}
+                    {{ item|capfirst }}
                     {% endif %}
                     {% with item.created|timesince as timesince %}
                     <span class="timesince">({% blocktrans %}{{ timesince }} ago{% endblocktrans %})</span>
