Added support for comment deletion.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@401 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -297,9 +297,13 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     background: none;
 }
 
-.comments li p {
-    margin: 0;
+.comments li .actions {
+    clear: none;
+    float: right;
+    margin: -20px 0 0;
 }
+
+.comments li p { margin: 0; }
 
 .comment-counter {
     float: right;
